# actix-web

./: .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
logs/: app.log.2025-03-10
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  migration.rs  schema.rs
src/configs/: database.rs  mod.rs  settings.rs  swagger.rs
src/modules/authentication/: auth.rs  crud.rs  endpoint.rs  middleware.rs  mod.rs  model.rs  service.rs  utils.rs
src/router/: mod.rs
