[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.7", features = ["v4"] }
actix-web = "4"

serde_json = "1"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-async-std-native-tls"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9"
chrono = "0.4"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
tracing-appender = "0.2"
futures = "0.3.31"


[dev-dependencies]
sea-orm-migration = "0.12"
